--- a/index.html
+++ b/index.html
@@ -210,27 +210,27 @@ footer a:hover { text-decoration:underline; }
   <h2>✂️ Unsere Stylings</h2>
   <div class="gallery-grid">
     <div class="gallery-item">
-      <img src="https://picsum.photos/id/1012/600/800" alt="Moderner Fade Haarschnitt">
+      <img src="https://images.unsplash.com/photo-1547846549-3017a523a67d?q=80&w=600&h=800&fit=crop&auto=format&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Moderner Fade Haarschnitt">
       <p>Moderner Fade</p>
     </div>
     <div class="gallery-item">
-      <img src="https://picsum.photos/id/1018/600/800" alt="Klassischer Haarschnitt">
+      <img src="https://images.unsplash.com/photo-1579895058866-9d391f63e4ef?q=80&w=600&h=800&fit=crop&auto=format&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Klassischer Haarschnitt">
       <p>Klassischer Schnitt</p>
     </div>
     <div class="gallery-item">
-      <img src="https://picsum.photos/id/1025/600/800" alt="Bartpflege">
+      <img src="https://images.unsplash.com/photo-1616035900593-9c8789311685?q=80&w=600&h=800&fit=crop&auto=format&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Bartpflege">
       <p>Präziser Bart-Trim</p>
     </div>
     <div class="gallery-item">
-      <img src="https://picsum.photos/id/1027/600/800" alt="Eleganter Side Part Haarschnitt">
+      <img src="https://images.unsplash.com/photo-1621607512214-682979203499?q=80&w=600&h=800&fit=crop&auto=format&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Eleganter Side Part Haarschnitt">
       <p>Eleganter Side Part</p>
     </div>
     <div class="gallery-item">
-      <img src="https://picsum.photos/id/1035/600/800" alt="Extremer Skin Fade Haarschnitt">
+      <img src="https://images.unsplash.com/photo-1605497788044-5a2a1b702e17?q=80&w=600&h=800&fit=crop&auto=format&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Extremer Skin Fade Haarschnitt">
       <p>Extremer Skin Fade</p>
     </div>
     <div class="gallery-item">
-      <img src="https://picsum.photos/id/1041/600/800" alt="Texturierter Crop Haarschnitt">
+      <img src="https://images.unsplash.com/photo-1596773099908-10b2f1559132?q=80&w=600&h=800&fit=crop&auto=format&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Texturierter Crop Haarschnitt">
       <p>Texturierter Crop</p>
     </div>
   </div>
