--- a/index.html
+++ b/index.html
@@ -21,31 +21,10 @@ body {
 p { margin:0; }
 .container { width:90%; max-width:1200px; margin:0 auto; padding:20px; }
 h2 { text-align:center; margin-bottom:30px; font-weight:700; text-shadow:0 0 15px rgba(255,255,255,0.8); }
-.pricing { display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:25px; }
 
-/* 3D-EFFEKT AUF PREIS-KARTEN */
-.category { 
-    background: rgba(255,255,255,0.05); 
-    padding:25px; 
-    border-radius:15px; 
-    backdrop-filter: blur(10px); 
-    box-shadow:0 15px 40px rgba(0,0,0,0.8), 0 0 20px rgba(255,255,255,0.3); 
-    transition:all 0.5s ease-in-out; 
-    transform: rotateX(5deg) rotateY(-2deg) translateZ(0);
-}
-.category:hover { 
-    box-shadow:0 0 50px rgba(255,255,255,0.9); 
-    transform: rotateX(0deg) rotateY(0deg) translateZ(20px);
-}
-.category h3 { text-align:center; margin-bottom:15px; font-weight:600; }
-.category ul { list-style:none; padding:0; }
-.category li { display:flex; justify-content:space-between; padding:6px 0; border-bottom:1px solid rgba(255,255,255,0.1); }
-.category li span:last-child {
-    font-weight: 400; 
-    color: #fff; 
-    font-size: 1em;
-    text-shadow: none;
-}
+/* --- ENTFERNTER PREISLISTEN-CSS --- */
+/* .pricing, .category, .category:hover, .category h3, .category ul, .category li { ... } */
+
 
 /* *************************************************************** */
 /* BANNER FIX */
@@ -99,6 +78,36 @@ footer a:hover { text-decoration:underline; }
 .social-links a { display:inline-block; margin:0 8px; }
 .social-links img { width:28px; height:28px; filter:brightness(1.2); transition:transform 0.3s ease; }
 .social-links img:hover { transform:scale(1.2); filter:brightness(1.5); }
+
+/* *************************************************************** */
+/* NEUER CSS FÜR DAS PREISLISTEN-BILD */
+/* *************************************************************** */
+.image-price-section {
+    text-align: center;
+    padding: 20px 0;
+    margin-bottom: 50px;
+    background: rgba(255,255,255,0.03); 
+    border-radius: 15px;
+    box-shadow:0 10px 30px rgba(0,0,0,0.7), 0 0 25px rgba(255,255,255,0.2);
+    transform: translateZ(-10px);
+    transition: transform 0.5s ease-in-out;
+}
+
+.image-price-section:hover {
+    transform: translateZ(5px);
+}
+
+.image-price-section img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
+    box-shadow: 0 0 15px rgba(255,255,255,0.2);
+    transition: transform 0.3s ease;
+}
+
+.image-price-section img:hover {
+    transform: scale(1.01);
+}
 
 /* *************************************************************** */
 /* REGELN FÜR DIE BILDER-GALERIE */
@@ -163,7 +172,8 @@ footer a:hover { text-decoration:underline; }
   /* 3D-Effekt auf Mobile deaktivieren, damit es nicht seltsam aussieht */
   .category, .category:hover, 
   .welcome-section, .welcome-section:hover,
-  .gallery-section, .gallery-section:hover { 
+  .gallery-section, .gallery-section:hover,
+  .image-price-section, .image-price-section:hover { 
       transform: none !important;
       box-shadow: 0 0 20px rgba(255,255,255,0.3);
   }
@@ -187,25 +197,10 @@ footer a:hover { text-decoration:underline; }
   <p>Schön, dass Sie hier sind! C&D Barbershop steht für Qualität, Stil und Persönlichkeit. In einer modernen Atmosphäre bieten wir individuelle Beratung, trendige Schnitte und hochwertige Pflege – für Ihr perfektes Haar- und Bartgefühl.</p>
 </div>
 
-<div class="container">
-  <h2>💇‍♂️ Preisliste</h2>
-  <div class="pricing">
-    <div class="category">
-      <h3>Leistungen</h3>
-      <ul>
-        <li><span>Haarschnitt</span><span>20 €</span></li>
-        <li><span>Bart</span><span>10 €</span></li>
-        <li><span>Schneiden, Waschen und Föhnen</span><span>25 €</span></li>
-        <li><span>Augenbrauen</span><span>5 €</span></li>
-        <li><span>Heißwachs</span><span>10 €</span></li>
-        <li><span>Gesichtsmaske</span><span>10 €</span></li>
-        <li><span>Kinder bis 12 Jahre</span><span>15 €</span></li>
-        <li><span>Kinder mit Behindertenausweis</span><span>Kostenlos</span></li>
-      </ul>
-    </div>
-  </div>
+<div class="container image-price-section">
+  <h2>💇‍♂️ Unsere Preisliste</h2>
+  <img src="pfad/zu/ihrem/preislistenbild.jpg" alt="Aktuelle Preisliste des C&D Barbershops" style="max-width: 600px; margin: 0 auto;">
 </div>
-
 <div class="container gallery-section">
   <h2>✂️ Unsere Stylings</h2>
   <div class="gallery-grid">
